k8s/db-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Development\exec\cmd\kompose.exe --file docker-compose.yaml convert
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: db
    spec:
      containers:
      - env:
        - name: POSTGRES_PASSWORD
          value: postgres_234
        image: postgres:9.6-alpine
        name: db
        ports:
        - containerPort: 5432
        resources: {}
      restartPolicy: Always
status: {}
