k8s/keycloak-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Development\exec\cmd\kompose.exe --file docker-compose.yaml convert
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: keycloak
    spec:
      containers:
      - env:
        - name: KEYCLOAK_PASSWORD
          value: admin_234
        - name: KEYCLOAK_USER
          value: admin
        image: jboss/keycloak
        name: keycloak
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
status: {}
