k8s/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Development\exec\cmd\kompose.exe --file docker-compose.yaml convert
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  ports:
  - name: "8180"
    port: 8180
    targetPort: 8080
  selector:
    io.kompose.service: keycloak
status:
  loadBalancer: {}
