k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Development\exec\cmd\kompose.exe --file docker-compose.yaml convert
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: server
  name: server
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  - name: "8778"
    port: 8778
    targetPort: 8778
  - name: "9779"
    port: 9779
    targetPort: 9779
  selector:
    io.kompose.service: server
status:
  loadBalancer: {}
