k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wsexample
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: wsexample.dev.balcia.com
      http:
        paths:
          - path: /
            backend:
              serviceName: server
              servicePort: 8080
